Prevent flickering of video_overlay element on mouse cursor colour inversion

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -1550,6 +1550,7 @@ body.light .contact video.light {
   background: rgba(0, 0, 0, 0.42);
   background-image: url(../img/pattern2.png);
   z-index: -1;
+  mix-blend-mode: unset;
 }
 /* Pull video under overlay */
 video.banner {
